--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,11 @@
 		<version>2.7.12</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-<<<<<<< HEAD
-	<groupId>com.example</groupId>
-	<artifactId>hotelproject</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>HotelProject</name>
-=======
 	<groupId>com.spirale</groupId>
 	<artifactId>TourPackages</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>TourPackages</name>
->>>>>>> manav/master
+
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -30,17 +24,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-<<<<<<< HEAD
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-=======
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-validation</artifactId>
+    <version>1.3.0.RELEASE</version>
+</dependency>
+
+
 <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
 <dependency>
     <groupId>org.springframework.security</groupId>
@@ -56,7 +48,7 @@
         <artifactId>jjwt</artifactId>
         <version>0.9.1</version>
     </dependency>
->>>>>>> manav/master
+
 
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
